# film2trello

./: .dockerignore  .gitignore  .nowignore  .travis.yml  Dockerfile  LICENSE  Procfile  README.md  fly.toml  now.json  pyproject.toml  pytest.ini  requirements.txt  runserver.py
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: aerovod.yml  build.yml  main.yml  scripts.yml
aerovod/: __main__.py  films.json
docs/: heroku.md  installation.md
film2trello/: __init__.py  bot.py  cli.py  config.py  core.py  csfd.py  deferred.py  films.json  forms.py  http.py  trello.py  views.py
film2trello/static/: main.css
film2trello/templates/: base.html  bookmarklet.js  failure.html  index.html  settings.html  submission.html  success.html
legacy/: README.md
legacy/film2trello/: __init__.py  csfd.py  trello.py
legacy/film2trello/static/: main.css
legacy/film2trello/templates/: submission.html
legacy/scripts/: inbox.py
legacy/tests/: csfd_kvifftv.html  kvifftv.html  test_film2trello.py  test_trello.py
scripts/: aerovod.py  inbox.py
tests/: aerovod.html  csfd.html  csfd_aerovod.html  csfd_antibot_cs.html  csfd_antibot_en.html  csfd_directors_cut.html  csfd_festival_name.html  csfd_kvifftv.html  csfd_missing_overview.html  csfd_no_image.html  csfd_no_other_name.html  csfd_same_name.html  csfd_tvshow.html  csfd_tvshow_e.html  csfd_tvshow_s.html  csfd_tvshow_s_e.html  csfd_wip_name.html  imdb.html  imdb_csfd_search.html  test_core.py  test_csfd.py  test_film2trello.py  test_trello.py
