[tool.poetry]
name = "film2trello"
version = "0.0.0"
description = "Turns film links to Trello cards 🍿"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/honzajavorek/film2trello/"

[tool.poetry.scripts]
film2trello = "film2trello.cli:main"

[tool.poetry.dependencies]
python = "3.11.*"
python-telegram-bot = "20.7"
click = "8.2.1"
httpx = {version = "0.25.*", extras = ["http2"]}
lxml = "6.0.1"
cssselect = "1.3.0"
pillow = "11.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
ruff = "0.12.*"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "."
addopts = "--ff"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
