[tool.poetry]
name = "film2trello"
version = "0.0.0"
description = "Turns film links to Trello cards 🍿"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/honzajavorek/film2trello/"

[tool.poetry.scripts]
film2trello = "film2trello.cli:main"

[tool.poetry.dependencies]
python = "3.11.*"
python-telegram-bot = "20.7"
click = "8.3.0"
httpx = {version = "0.25.*", extras = ["http2"]}
lxml = "6.0.2"
cssselect = "1.3.0"
pillow = "12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
ruff = "0.14.*"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "."
addopts = "--ff"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
